# THSR-Ticket

./: .gitignore  README.md  makefile  profile.example.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
tests/: __init__.py  test_avail_trains.py  test_booking_flow.py  test_confirm_ticket_flow.py  test_confirm_train_flow.py  test_continuous_scan.py  test_error_feedback.py  test_form_data.py  test_profile_config.py
thsr_ticket/: html_parser.py  input_validation.py  inspect_thsr_structure.py  main.py
thsr_ticket/configs/: common.py
thsr_ticket/configs/rest/: endpoints.py  station_id.py
thsr_ticket/configs/web/: enums.py  http_config.py  param_schema.py  parse_avail_train.py  parse_html_element.py
thsr_ticket/controller/: booking_flow.py  confirm_ticket_flow.py  confirm_train_flow.py  first_page_flow.py  form_data.py  profile_config.py
thsr_ticket/extra/: image_process.py  input_validation.py
thsr_ticket/model/json/: base_response.py
thsr_ticket/model/json/v1/: daily_train_info.py  station_name.py  stop_sequence.py  train.py
thsr_ticket/model/web/: confirm_ticket.py  confirm_train.py
thsr_ticket/model/web/booking_form/: booking_form.py  ticket_num.py  time_table.py
thsr_ticket/remote/: endpoint_client.py  http_request.py
thsr_ticket/view/web/: booking_form_info.py  show_avail_trains.py  show_booking_result.py  show_error_msg.py
thsr_ticket/view_model/: abstract_view_model.py  avail_trains.py  booking_result.py  error_feedback.py
