[project]
name = "thsr-ticket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddddocr==1.4.11",
    "jsonschema>=4.26.0",
    "numpy<2",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]
